--- a/prj-02/package.json
+++ b/prj-02/package.json
@@ -5,15 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.3",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
