--- a/prj-02/public/manifest.json
+++ b/prj-02/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "React App",
+  "short_name": "The Quick PayMe",
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "logo192.png",
