--- a/prj-02/package.json
+++ b/prj-02/package.json
@@ -11,9 +11,10 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
+    "dayjs": "^1.11.13",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-bootstrap": "^0.26.3",
