--- a/prj-02/package.json
+++ b/prj-02/package.json
@@ -21,6 +21,7 @@
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "start": "^5.1.0"
   },
