--- a/prj-02/package.json
+++ b/prj-02/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "jspdf": "^3.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
